Fix: Style and visibility updates for rating / personal note

--- a/src/styles/partials/_recipe.scss
+++ b/src/styles/partials/_recipe.scss
@@ -4,36 +4,36 @@
   margin: var(--spacing-0) var(--spacing-4) 95px var(--spacing-4); // Footer height & under construction banner
 }
 
+.recipe header {
+    display: flex;
+
+    .recipe-rating {
+       padding: 10px
+    }
+}
+
 .recipe header h1 {
-    margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
-  }
-  
-  .recipe header p {
-    font-size: var(--fontSize-2);
-    font-family: var(--font-heading);
-  }
-  
-  .blog-post-nav ul {
-    margin: var(--spacing-0);
-  }
+  margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+  width: fit-content
+}
 
 // Post list item
 .recipe-list-item {
-    margin-bottom: var(--spacing-8);
-    margin-top: var(--spacing-8);
-  }
-  
-  .recipe-list-item p {
-    margin-bottom: var(--spacing-0);
-  }
-  
-  .recipe-list-item h2 {
-    font-size: var(--fontSize-4);
-    color: var(--color-primary);
-    margin-bottom: var(--spacing-2);
-    margin-top: var(--spacing-0);
-  }
-  
-  .recipe-list-item header {
-    margin-bottom: var(--spacing-4);
-  }
+  margin-bottom: var(--spacing-8);
+  margin-top: var(--spacing-8);
+}
+
+.recipe-list-item p {
+  margin-bottom: var(--spacing-0);
+}
+
+.recipe-list-item h2 {
+  font-size: var(--fontSize-4);
+  color: var(--color-primary);
+  margin-bottom: var(--spacing-2);
+  margin-top: var(--spacing-0);
+}
+
+.recipe-list-item header {
+  margin-bottom: var(--spacing-4);
+}
